crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_hs256_shape.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
expression: result
---
label: snapshot-hs256
algorithm: HS256
secret_len: 32
