crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_hs384_shape.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
expression: result
---
label: snapshot-hs384
algorithm: HS384
secret_len: 48
