crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_hs512_shape.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
expression: result
---
label: snapshot-hs512
algorithm: HS512
secret_len: 64
