crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_secret_byte_lengths.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
assertion_line: 85
expression: info
---
hs256_len: 32
hs384_len: 48
hs512_len: 64
