crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_secret_lengths.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
expression: cases
---
- algorithm: HS256
  secret_len: 32
- algorithm: HS384
  secret_len: 48
- algorithm: HS512
  secret_len: 64
