crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hmac_secret_sizes.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
expression: sizes
---
- algorithm: HS256
  expected_bytes: 32
  actual_bytes: 32
- algorithm: HS384
  expected_bytes: 48
  actual_bytes: 48
- algorithm: HS512
  expected_bytes: 64
  actual_bytes: 64
