crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hs256_jwk.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
assertion_line: 16
description: "HS256 JWK structure — redact secret material, keep shape"
expression: jwk
---
alg: HS256
k: "[secret]"
kid: "[kid]"
kty: oct
use: sig
