crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hs256_jwks.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
assertion_line: 64
description: HS256 JWKS wrapper — single key set
expression: jwks
---
keys:
  - alg: HS256
    k: "[secret]"
    kid: "[kid]"
    kty: oct
    use: sig
