crates/uselesskey-hmac/tests/snapshots/snapshots_hmac__hs384_jwk.snap
---
source: crates/uselesskey-hmac/tests/snapshots_hmac.rs
assertion_line: 32
description: "HS384 JWK structure — redact secret material, keep shape"
expression: jwk
---
alg: HS384
k: "[secret]"
kid: "[kid]"
kty: oct
use: sig
